--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
         </p>
       </div>
     
+      <center>
       <img src = "https://cdn.discordapp.com/attachments/812985864446935095/1009055666524127342/unknown_1.png">
-
+      </center>
 
 
 
